# middleware-python

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
ecoapi/: __init__.py  _aggregator.py  _init.py  _provider_registry.py  _transport.py  _types.py
ecoapi/frameworks/: fastapi.py  flask.py
recost/: __init__.py  _aggregator.py  _init.py  _interceptor.py  _provider_registry.py  _transport.py  _types.py
recost/frameworks/: fastapi.py  flask.py
tests/: conftest.py  test_aggregator.py  test_contract.py  test_fastapi.py  test_flask.py  test_init.py  test_interceptor.py  test_provider_registry.py  test_scaffold.py  test_transport.py  test_types.py
